<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/edit_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_Usuario"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/text_Password"
        android:ems="10"
        android:inputType="number" />

    <requestFocus />

    <EditText
        android:id="@+id/edit_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/text_Password"
        android:layout_alignLeft="@+id/edit_Usuario"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/text_Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_Usuario"
        android:layout_below="@+id/text_Inicial"
        android:layout_marginTop="120dp"
        android:text="@string/txt_password" 
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/text_Inicial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/txt_inicial" 
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_conectar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_Password"
        android:layout_marginTop="90dp"
        android:layout_toRightOf="@+id/text_Usuario"
        android:onClick="Conectar"
        android:text="@string/txt_conectar" />

    <TextView
        android:id="@+id/text_Usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edit_Password"
        android:layout_alignLeft="@+id/text_Inicial"
        android:text="@string/txt_usuario"
        android:textSize="20sp" />

</RelativeLayout>